--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /*** SPRITES ***/
 /* icons */
 /* line 111, icons */
-.icons-sprite, .icons-arrows, .icons-bullet, .icons-calendar, .icons-close, .icons-close_big, .icons-gear, .icons-handle, .icons-iati, .icons-icons, .icons-marker, .icons-money, .icons-plus, .icons-star, .icons-symbols, .icons-view, .box .content ul li, .box a.close, nav ul li .filter.iati .content ul.symbols li .icon, nav ul li .filter.iati .content ul.symbols li .icon.iati, nav ul li .filter.view div.content ul.symbols li .icon, nav ul li .filter.view div.content ul.symbols li .icon.projects, nav ul li .filter.view div.content ul.symbols li .icon.agencies, aside .content ul li.money, aside .content ul li.calendar, aside .content ul li.marker, aside .content ul li.gear, aside .content ul li.plus, aside .content ul li.star, aside a.close {
+.icons-sprite, .icons-arrows, .icons-bullet, .icons-calendar, .icons-close, .icons-close_big, .icons-gear, .icons-handle, .icons-iati, .icons-icons, .icons-marker, .icons-money, .icons-plus, .icons-star, .icons-symbols, .icons-view, .box .content ul li, .box a.close, nav ul li .filter.iati .content ul.symbols li .icon, nav ul li .filter.iati .content ul.symbols li .icon.iati, nav ul li .filter.view div.content ul.symbols li .icon, nav ul li .filter.view div.content ul.symbols li .icon.projects, nav ul li .filter.view div.content ul.symbols li .icon.agencies, aside .content ul li.money, aside .content ul li.calendar, aside .content ul li.marker, aside .content ul li.gear, aside .content ul li.plus, aside .content ul li.star, aside a.close, #timeline .handle, .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus, .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
   background: url('/img/icons-s4e762dcab8.png') no-repeat;
 }
 
@@ -1058,4 +1058,306 @@ aside a.close {
   left: 50%;
   margin-left: -477px;
   z-index: 10000;
+}
+/* line 600, ../scss/style.scss */
+#timeline .slider {
+  position: absolute;
+  width: 943px;
+  height: 80px;
+  left: 6px;
+}
+/* line 607, ../scss/style.scss */
+#timeline .handle {
+  position: absolute;
+  width: 17px;
+  height: 18px;
+  background-position: 0 -411px;
+  top: 31px;
+}
+/* line 614, ../scss/style.scss */
+#timeline .handle.min {
+  left: 100px;
+}
+/* line 615, ../scss/style.scss */
+#timeline .handle.max {
+  left: 700px;
+}
+
+/* line 622, ../scss/style.scss */
+.ui-helper-hidden {
+  display: none;
+}
+
+/* line 623, ../scss/style.scss */
+.ui-helper-hidden-accessible {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
+/* line 624, ../scss/style.scss */
+.ui-helper-reset {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  line-height: 1.3;
+  text-decoration: none;
+  font-size: 100%;
+  list-style: none;
+}
+
+/* line 625, ../scss/style.scss */
+.ui-helper-clearfix:before, .ui-helper-clearfix:after {
+  content: "";
+  display: table;
+}
+
+/* line 626, ../scss/style.scss */
+.ui-helper-clearfix:after {
+  clear: both;
+}
+
+/* line 627, ../scss/style.scss */
+.ui-helper-clearfix {
+  zoom: 1;
+}
+
+/* line 628, ../scss/style.scss */
+.ui-helper-zfix {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  opacity: 0;
+  filter: Alpha(Opacity=0);
+}
+
+/* Interaction Cues
+----------------------------------*/
+/* line 633, ../scss/style.scss */
+.ui-state-disabled {
+  cursor: default !important;
+}
+
+/* Icons
+----------------------------------*/
+/* states and images */
+/* line 640, ../scss/style.scss */
+.ui-icon {
+  display: block;
+  text-indent: -99999px;
+  overflow: hidden;
+  background-repeat: no-repeat;
+}
+
+/* Misc visuals
+----------------------------------*/
+/* Overlays */
+/* line 647, ../scss/style.scss */
+.ui-widget-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/*
+ * jQuery UI CSS Framework 1.8.18
+ *
+ * Copyright 2011, AUTHORS.txt (http://jqueryui.com/about)
+ * Dual licensed under the MIT or GPL Version 2 licenses.
+ * http://jquery.org/license
+ *
+ * http://docs.jquery.com/UI/Theming/API
+ *
+ */
+/* Component containers
+----------------------------------*/
+/* line 664, ../scss/style.scss */
+.ui-widget-header {
+  background: url(../img/backgrounds/bkg_timeline_selected.png) 50% 50% repeat-x;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+/* Interaction states
+----------------------------------*/
+/* line 668, ../scss/style.scss */
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+  display: block;
+  width: 17px;
+  height: 18px;
+  background-position: 0 -411px;
+  ountline: none;
+  cursor: pointer;
+}
+
+/* line 669, ../scss/style.scss */
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+  display: block;
+  cursor: pointer;
+  width: 17px;
+  height: 18px;
+  background-position: 0 -411px;
+  outline: none;
+}
+
+/* line 670, ../scss/style.scss */
+.ui-state-hover a, .ui-state-hover a:hover {
+  color: #c77405;
+  text-decoration: none;
+  outline: none;
+}
+
+/* line 671, ../scss/style.scss */
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+  width: 17px;
+  height: 18px;
+  background-position: 0 -411px;
+  outline: none;
+}
+
+/* line 672, ../scss/style.scss */
+.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
+  color: #eb8f00;
+  text-decoration: none;
+  outline: none;
+}
+
+/* Interaction Cues
+----------------------------------*/
+/* line 676, ../scss/style.scss */
+.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {
+  border: 1px solid #fed22f;
+  background: #ffe45c url(images/ui-bg_highlight-soft_75_ffe45c_1x100.png) 50% top repeat-x;
+  color: #363636;
+}
+
+/* line 677, ../scss/style.scss */
+.ui-state-highlight a, .ui-widget-content .ui-state-highlight a, .ui-widget-header .ui-state-highlight a {
+  color: #363636;
+}
+
+/* line 678, ../scss/style.scss */
+.ui-state-error, .ui-widget-content .ui-state-error, .ui-widget-header .ui-state-error {
+  border: 1px solid #cd0a0a;
+  background: #b81900 url(images/ui-bg_diagonals-thick_18_b81900_40x40.png) 50% 50% repeat;
+  color: #ffffff;
+}
+
+/* line 679, ../scss/style.scss */
+.ui-state-error a, .ui-widget-content .ui-state-error a, .ui-widget-header .ui-state-error a {
+  color: #ffffff;
+}
+
+/* line 680, ../scss/style.scss */
+.ui-state-error-text, .ui-widget-content .ui-state-error-text, .ui-widget-header .ui-state-error-text {
+  color: #ffffff;
+}
+
+/* line 681, ../scss/style.scss */
+.ui-priority-primary, .ui-widget-content .ui-priority-primary, .ui-widget-header .ui-priority-primary {
+  font-weight: bold;
+}
+
+/* line 682, ../scss/style.scss */
+.ui-priority-secondary, .ui-widget-content .ui-priority-secondary, .ui-widget-header .ui-priority-secondary {
+  opacity: .7;
+  filter: Alpha(Opacity=70);
+  font-weight: normal;
+}
+
+/* line 683, ../scss/style.scss */
+.ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled {
+  opacity: .35;
+  filter: Alpha(Opacity=35);
+  background-image: none;
+}
+
+/* Misc visuals
+----------------------------------*/
+/* line 688, ../scss/style.scss */
+.ui-slider {
+  position: relative;
+  text-align: left;
+}
+
+/* line 689, ../scss/style.scss */
+.ui-slider .ui-slider-handle {
+  position: absolute;
+  z-index: 2;
+  width: 1.2em;
+  height: 1.2em;
+  cursor: default;
+}
+
+/* line 690, ../scss/style.scss */
+.ui-slider .ui-slider-range {
+  position: absolute;
+  z-index: 1;
+  font-size: .7em;
+  display: block;
+  border: 0;
+  background-position: 0 0;
+}
+
+/* line 692, ../scss/style.scss */
+.ui-slider-horizontal {
+  height: .8em;
+}
+
+/* line 693, ../scss/style.scss */
+.ui-slider-horizontal .ui-slider-handle {
+  cursor: col-resize;
+  display: block;
+  top: 30px;
+  margin-left: -0.6em;
+}
+
+/* line 694, ../scss/style.scss */
+.ui-slider-horizontal .ui-slider-range {
+  top: 6px;
+  height: 68px;
+}
+
+/* line 695, ../scss/style.scss */
+.ui-slider-horizontal .ui-slider-range-min {
+  left: 0;
+}
+
+/* line 696, ../scss/style.scss */
+.ui-slider-horizontal .ui-slider-range-max {
+  right: 0;
+}
+
+/* line 698, ../scss/style.scss */
+.ui-slider-vertical {
+  width: .8em;
+  height: 100px;
+}
+
+/* line 699, ../scss/style.scss */
+.ui-slider-vertical .ui-slider-handle {
+  left: -0.3em;
+  margin-left: 0;
+  margin-bottom: -0.6em;
+}
+
+/* line 700, ../scss/style.scss */
+.ui-slider-vertical .ui-slider-range {
+  left: 0;
+  width: 100%;
+}
+
+/* line 701, ../scss/style.scss */
+.ui-slider-vertical .ui-slider-range-min {
+  bottom: 0;
+}
+
+/* line 702, ../scss/style.scss */
+.ui-slider-vertical .ui-slider-range-max {
+  top: 0;
 }
